--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.47.0",
     "dotenv": "^16.4.5",
     "ldapjs": "^3.0.7",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "eslint": "^8",
