--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tabler/icons-react": "^2.47.0",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "ldapjs": "^3.0.7",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.71.1"
+    "react-hook-form": "^7.50.1",
+    "sass": "^1.71.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
