--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@next/swc-linux-x64-gnu": "^14.1.3",
+    "@next/swc-linux-x64-musl": "^14.1.3",
     "@tabler/icons-react": "^2.47.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.0.8",
     "ldapjs": "^3.0.7",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
